sua doi lan cuoi

--- a/custommer.html
+++ b/custommer.html
@@ -198,11 +198,6 @@ for(let i=0;i<n;++i){
                     <input type="text" class="myInput" onkeyup="myFunction(1)" placeholder="Nhập Tên nhân viên cần tìm..."
                     data-toggle="tooltip" data-placement="bottom" title="Tìm Kiếm Nhân Viên">
                 </li>
-                <li onclick="onSeachButtonClick(2)">Chức vụ
-                
-                    <input type="text" class="myInput" onkeyup="myFunction(2)" placeholder="Nhập Chức vụ cần tìm..."
-                    data-toggle="tooltip" data-placement="bottom" title="Tìm Kiếm Nhân Viên">
-                </li>
             </ul>
         </b></p>
 
@@ -231,7 +226,7 @@ for(let i=0;i<n;++i){
             </div>
 
         </div>
-        <table class="table table-bordered" id="myTable">
+        <table class="table table-bordered" id="myTable" style="text-align: center;">
             <thead>
                 <tr class="ex">
                     <th>Mã nhân viên</th>
