--- a/manager/baocao.html
+++ b/manager/baocao.html
@@ -195,11 +195,6 @@ for(let i=0;i<n;++i){
                     <input type="text" class="myInput" onkeyup="myFunction(1)" placeholder="Nhập Mã dự án cần tìm..."
                     data-toggle="tooltip" data-placement="bottom" title="Tìm Kiếm Nhân Viên">
                 </li>
-                <li onclick="onSeachButtonClick(2)">Mã nhân viên
-                
-                    <input type="text" class="myInput" onkeyup="myFunction(2)" placeholder="Nhập Mã nhân viên cần tìm..."
-                    data-toggle="tooltip" data-placement="bottom" title="Tìm Kiếm Nhân Viên">
-                </li>
             </ul>
         </b></p>
 
@@ -241,9 +236,9 @@ for(let i=0;i<n;++i){
             </thead>
             <tbody>
                 <tr>
-                    <td>BC01</td>
-                    <td>A01</td>
-                    <td>NV01</td>
+                    <td style="text-align: center;">BC01</td>
+                    <td style="text-align: center;">A01</td>
+                    <td style="text-align: center;">NV01</td>
                     <td>Đã hoàn thành tất cả các chức năng</td>
                     <td>
                          <select id = "status">
@@ -263,9 +258,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC02</td>
-                    <td>A02</td>
-                    <td>NV02</td>
+                    <td style="text-align: center;">BC02</td>
+                    <td style="text-align: center;">A02</td>
+                    <td style="text-align: center;">NV02</td>
                     <td>Đã chỉnh sửa thành công lỗi hiển thị</td>
                     <td>
                             <select>
@@ -285,9 +280,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC03</td>
-                    <td>A03</td>
-                    <td>NV03</td>
+                    <td style="text-align: center;">BC03</td>
+                    <td style="text-align: center;">A03</td>
+                    <td style="text-align: center;">NV03</td>
                     <td>Đã hoàn thành các sơ đồ FFD,DFD,sơ đồ trình tự(SD)</td>
                     <td>
                             <select>
@@ -307,9 +302,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC04</td>
-                    <td>A04</td>
-                    <td>NV04</td>
+                    <td style="text-align: center;">BC04</td>
+                    <td style="text-align: center;">A04</td>
+                    <td style="text-align: center;">NV04</td>
                     <td>Đã hoàn thành các sơ đồ ERD,sơ đồ use-case tổng quát và chi tiết các UC</td>
                     <td>
                             <select>
@@ -329,9 +324,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC05</td>
-                    <td>A05</td>
-                    <td>NV05</td>
+                    <td style="text-align: center;">BC05</td>
+                    <td style="text-align: center;">A05</td>
+                    <td style="text-align: center;">NV05</td>
                     <td>Đã hoàn thành công việc thiết kế kiến trúc và thiết kế sơ đồ quan hệ</td>
                     <td>
                             <select>
@@ -351,9 +346,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC06</td>
-                    <td>A06</td>
-                    <td>NV06</td>
+                    <td style="text-align: center;">BC06</td>
+                    <td style="text-align: center;">A06</td>
+                    <td style="text-align: center;">NV06</td>
                     <td>Đã xác định các chuẩn NF và thiết kế giao diện người dùng</td>
                     <td>
                             <select>
@@ -373,9 +368,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC07</td>
-                    <td>A07</td>
-                    <td>NV07</td>
+                    <td style="text-align: center;">BC07</td>
+                    <td style="text-align: center;">A07</td>
+                    <td style="text-align: center;">NV07</td>
                     <td>Đã hoàn thành kiểm thử back-end</td>
                     <td>
                             <select>
@@ -395,9 +390,9 @@ for(let i=0;i<n;++i){
                     </td>
                 </tr>
                 <tr>
-                    <td>BC08</td>
-                    <td>A08</td>
-                    <td>NV08</td>
+                    <td style="text-align: center;">BC08</td>
+                    <td style="text-align: center;">A08</td>
+                    <td style="text-align: center;">NV08</td>
                     <td>Đã hoàn thành kiểm thử front-end</td>
                     <td>
                             <option value="default">Chưa hoàn thành</option>
