--- a/manager/custommer.html
+++ b/manager/custommer.html
@@ -229,7 +229,7 @@ for(let i=0;i<n;++i){
             </div>
 
         </div>
-        <table class="table table-bordered" id="myTable">
+        <table class="table table-bordered" id="myTable" style="text-align: center;">
             <thead>
                 <tr class="ex">
                     <th>Mã nhân viên</th>
