--- a/manager/sukien.html
+++ b/manager/sukien.html
@@ -300,17 +300,19 @@
         </thead>
         <tbody>
           <tr>
-            <td>A01</td>
-            <td>Dự án quản lý nhân sự</td>
-            <td>22/12/2022</td>
-            <td>2024</td>
+            <td style="text-align: center">A01</td>
+            <td style="text-align: center; font-weight: bold">
+              Dự án quản lý nhân sự
+            </td>
+            <td style="text-align: center">22/12/2022</td>
+            <td style="text-align: center">2024</td>
             <td>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Veritatis odio illum sit accusamus, eius corporis explicabo
               laboriosam sunt commodi nobis asperiores neque inventore facilis
               ipsum quia quos, autem saepe aperiam.
             </td>
-            <td>Nhóm 1</td>
+            <td style="text-align: center">Nhóm 1</td>
             <td>
               <select>
                 <option value="default">Chưa hoàn thành</option>
@@ -324,17 +326,24 @@
                                 aria-hidden="true"></i></a>
                         <a class="edit" title="Sữa" data-toggle="tooltip"><i class="fa fa-pencil"
                                 aria-hidden="true"></i></a>
+                        <a class="delete" title="Xóa" data-toggle="tooltip"><i class="fa fa-trash-o"
+                                aria-hidden="true"></i></a>
                     </td>
           </tr>
           <tr>
-            <td>A02</td>
-            <td>Dự án quản lý bệnh viện</td>
-            <td>15/12/2022</td>
-            <td>2024</td>
-            <td>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis odio illum sit accusamus, eius corporis explicabo laboriosam sunt commodi nobis asperiores neque inventore facilis ipsum quia quos, autem saepe aperiam.
+            <td style="text-align: center">A02</td>
+            <td style="text-align: center; font-weight: bold">
+              Dự án quản lý bệnh viện
             </td>
-            <td>Nhóm 2</td>
+            <td style="text-align: center">15/12/2022</td>
+            <td style="text-align: center">2024</td>
+            <td>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Veritatis odio illum sit accusamus, eius corporis explicabo
+              laboriosam sunt commodi nobis asperiores neque inventore facilis
+              ipsum quia quos, autem saepe aperiam.
+            </td>
+            <td style="text-align: center">Nhóm 2</td>
             <td>
               <select>
                 <option value="default">Chưa hoàn thành</option>
@@ -348,17 +357,24 @@
                                 aria-hidden="true"></i></a>
                         <a class="edit" title="Sữa" data-toggle="tooltip"><i class="fa fa-pencil"
                                 aria-hidden="true"></i></a>
+                        <a class="delete" title="Xóa" data-toggle="tooltip"><i class="fa fa-trash-o"
+                                aria-hidden="true"></i></a>
                     </td>
           </tr>
           <tr>
-            <td>A03</td>
-            <td>Dự án quản lý quán cafe</td>
-            <td>01/01/2023-05/01/2023</td>
-            <td>2024</td>
+            <td style="text-align: center">A03</td>
+            <td style="text-align: center; font-weight: bold">
+              Dự án quản lý quán cafe
+            </td>
+            <td style="text-align: center">01/01/2023-05/01/2023</td>
+            <td style="text-align: center">2024</td>
             <td>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed provident dolores! A, consequatur voluptas, assumenda ex doloremque eum blanditiis rerum ratione et beatae excepturi est, cum commodi tenetur iure.
-              </td>
-              <td>Nhóm 3</td>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed
+              provident dolores! A, consequatur voluptas, assumenda ex
+              doloremque eum blanditiis rerum ratione et beatae excepturi est,
+              cum commodi tenetur iure.
+            </td>
+            <td style="text-align: center">Nhóm 3</td>
               <td>
               <select>
                 <option value="default">Chưa hoàn thành</option>
@@ -372,20 +388,24 @@
                                 aria-hidden="true"></i></a>
                         <a class="edit" title="Sữa" data-toggle="tooltip"><i class="fa fa-pencil"
                                 aria-hidden="true"></i></a>
+                        <a class="delete" title="Xóa" data-toggle="tooltip"><i class="fa fa-trash-o"
+                                aria-hidden="true"></i></a>
                     </td>
                     </tr>
           <tr>
-            <td>A04</td>
-            <td>Dự án quản lý hiệu sách</td>
-            <td>20/01/2023-07/02/2023</td>
-            <td>2024</td>
+            <td style="text-align: center">A04</td>
+            <td style="text-align: center; font-weight: bold">
+              Dự án quản lý hiệu sách
+            </td>
+            <td style="text-align: center">20/01/2023-07/02/2023</td>
+            <td style="text-align: center">2024</td>
             <td>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed
               provident dolores! A, consequatur voluptas, assumenda ex
               doloremque eum blanditiis rerum ratione et beatae excepturi est,
               cum commodi tenetur iure.
             </td>
-            <td>Nhóm 3</td>
+            <td style="text-align: center">Nhóm 3</td>
             <td>
               <select>
                 <option value="default">Chưa hoàn thành</option>
@@ -399,20 +419,24 @@
                                 aria-hidden="true"></i></a>
                         <a class="edit" title="Sữa" data-toggle="tooltip"><i class="fa fa-pencil"
                                 aria-hidden="true"></i></a>
+                        <a class="delete" title="Xóa" data-toggle="tooltip"><i class="fa fa-trash-o"
+                                aria-hidden="true"></i></a>
                     </td>
           </tr>
           <tr>
-            <td>A05</td>
-            <td>Dự án nhà cái uy tín</td>
-            <td>22/01/2023</td>
-            <td>2024</td>
+            <td style="text-align: center">A05</td>
+            <td style="text-align: center; font-weight: bold">
+              Dự án nhà cái uy tín
+            </td>
+            <td style="text-align: center">22/01/2023</td>
+            <td style="text-align: center">2024</td>
             <td>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed
               provident dolores! A, consequatur voluptas, assumenda ex
               doloremque eum blanditiis rerum ratione et beatae excepturi est,
               cum commodi tenetur iure.
             </td>
-            <td>Nhóm 2</td>
+            <td style="text-align: center">Nhóm 1</td>
             <td>
               <select>
                 <option value="default">Chưa hoàn thành</option>
@@ -426,20 +450,24 @@
                                 aria-hidden="true"></i></a>
                         <a class="edit" title="Sữa" data-toggle="tooltip"><i class="fa fa-pencil"
                                 aria-hidden="true"></i></a>
+                        <a class="delete" title="Xóa" data-toggle="tooltip"><i class="fa fa-trash-o"
+                                aria-hidden="true"></i></a>
                     </td>
           </tr>
           <tr>
-            <td>A06</td>
-            <td>Dự án trang bóng đá uy tín</td>
-            <td>23/01/2023</td>
-            <td>2024</td>
+            <td style="text-align: center">A06</td>
+            <td style="text-align: center; font-weight: bold">
+              Dự án trang bóng đá uy tín
+            </td>
+            <td style="text-align: center">23/01/2023</td>
+            <td style="text-align: center">2024</td>
             <td>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Veritatis odio illum sit accusamus, eius corporis explicabo
               laboriosam sunt commodi nobis asperiores neque inventore facilis
               ipsum quia quos, autem saepe aperiam.
             </td>
-            <td>Nhóm 2</td>
+            <td style="text-align: center">Nhóm 2</td>
             <td>
               <select>
                 <option value="default">Chưa hoàn thành</option>
@@ -452,6 +480,8 @@
                         <a class="add" title="Lưu Lại" data-toggle="tooltip"><i class="fa fa-floppy-o"
                                 aria-hidden="true"></i></a>
                         <a class="edit" title="Sữa" data-toggle="tooltip"><i class="fa fa-pencil"
+                                aria-hidden="true"></i></a>
+                        <a class="delete" title="Xóa" data-toggle="tooltip"><i class="fa fa-trash-o"
                                 aria-hidden="true"></i></a>
                     </td>
           </tr>
